tests/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-jsa
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: jsadmissions.momiji.com/not-existing-key
                operator: NotIn
                values: [ "not-existing-value" ]
  containers:
    - name: sleep
      image: busybox
      command: [ "sleep", "10s" ]
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pending
  namespace: test-jsa
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: jsadmissions.momiji.com/not-existing-key
                operator: In
                values: [ "not-existing-value" ]
  containers:
    - name: sleep
      image: busybox
      command: [ "sleep", "10s" ]
  restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: test-jsa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
        - name: sleep
          image: busybox
          command: [ "sleep", "10s" ]
