tests/rbac.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-jsa
rules:
  - apiGroups: [ "" ]
    resources: [ "pods" ]
    verbs: [ "get", "watch", "list" ]
  - apiGroups: [ "momiji.com" ]
    resources: [ "jsadmissions", "clusterjsadmissions" ]
    verbs: [ "get","watch","list" ]
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-jsa
  namespace: test-jsa
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-jsa
  namespace: test-jsa
subjects:
  - kind: ServiceAccount
    name: test-jsa
    namespace: test-jsa
roleRef:
  kind: ClusterRole
  name: test-jsa
  apiGroup: rbac.authorization.k8s.io
